--- a/FastMap/FastMap.vcxproj.filters
+++ b/FastMap/FastMap.vcxproj.filters
@@ -20,8 +20,11 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="LinearMap.h">
+    <ClInclude Include="include\LinearMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="ClassDiagram.cd" />
   </ItemGroup>
 </Project>
