--- a/src/FastMap/FastMap.vcxproj.filters
+++ b/src/FastMap/FastMap.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="..\include\LinearMap.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\examples\examples.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
